# cgtools

./: .gitignore  0_script.sh  LICENSE  README.md  blac_scripts.py  bplots.py  check_times.sh  delete_files.sh  env.yml  environment.yml  environment_old.yml  geometry_3bb.py  load_modules.sh  nodes  pyproject.toml  rplots.py  run_all.py  run_tests.sh  setup.cfg  setup.py  submit.py  submit2sol.sh  test.yml
.github/workflows/: gh-pages.yml
cgtools/: __init__.py  _version.py  cli.py  dataio.py  dci_dfi.py  finish_setup.py  get_go.py  gmx_wraps.py  gmxmd.py  io.py  itpio.py  lrt.py  martini_tools.py  martinize_nucleotides.py  martinize_nucleotides_v2.9.py  martinize_nucleotides_v3.0.py  martinize_nucleotides_v3.0.py_tmp  martinize_nucleotides_v3.1.py  mdm.py  misc.py  mmmd.py  pdbtools.py  plotting.py  pyrotini.py  run_all.py  set_bfactors.py  system.py  utils.py
cgtools/_actual_math/: legacy.py  mycmath.pyx  mypymath.py
cgtools/cgtools/: forcefields.py  geometry.py  geometry_3bb.py  newm.py  plot_geometry.py  plotting.py  topology.py
cgtools/enm/: dfi_dci.py  enm_analysis.py  enm_tools.py
cgtools/forge/: bonds2str.py  cgmap.py  forcefields.py  geometry.py  topology.py
cgtools/itp/: martini_RNA.itp  martini_v3.0.0_ions_v1.itp  martini_v3.0.0_rna.itp
cgtools/marnatini/: cgmap.py  geometry.py  geometry_3bb.py  persistence_length.py  plot_geometry.py
cgtools/martini/: insane.py  martini_tools.py  martinize_nucleotides.py  martinize_rna.py
cgtools/mycmath/: legacy.py  mycmath.pyx
cgtools/tests/: molecule.itp  (+12 more)
docs/: Makefile  README.md  api.rst  conf.py  developer_guide.rst  getting_started.rst  index.rst  make.bat  requirements.yaml  user_guide.rst
reforge/: cli.py  gmxmd.py  io.py  itpio.py  mdm.py  mmmd.py  pdbtools.py  plotting.py  plotting_old.py  utils.py
test_system/: go_atomtypes.itp  go_nbparams.itp  mdout.mdp  protein.top  system.gro  system.top  topol.top
tests/: enm_pipe.py  fft_test.py  gmx_pipe.py  pipeline.py  plot.py  plots.py  submit.py  test_gmxmd.py  test_martini_go.py  test_mda.py  test_mdm.py  test_mycmath.py  test_mypymath.py  test_pdbtools.py  test_rcmath.py  test_rpymath.py
workflows/: animate.py  bfacs.py  check_times.sh  egfr_pipe.py  enm_pipe.py  fft_test.py  gmx_pipe.py  plot.py  submit.py
(+147 files in other folders)
